public/stylesheets/activity.less
@import 'theorems';

.activity-content .learning-outcome {
    display: none;
}

/* Want vertical progress bars on practice cards */

/* There's a lot of hackish pixel computations here, and they differ in the isotope and the course nav bar */
.vertical {
    width: 154.4px;
    position: relative;
    left: -154.4px;
    -webkit-transform: rotate(-90deg);
    -webkit-transform-origin: top right;
    transform: rotate(-90deg);
    transform-origin: top right;
}

a.activity-card.practice {
    width: 36.26666px;
}

li a.activity-card.practice {
    width: 48.266666px;
}



.activitytitle {
  font-size: 16pt;
  font-weight: bold;
}

.answer, .expression-answer {
  form.form-inline {
    width: 11em;
  }
}

/* Use LESS to copy bootstrap's dl-horizontal to our dialogue class */
dl.dialogue {
  .dl-horizontal;
}

/*
.btn-ximera-correct, .btn-ximera-incorrect, .btn-ximera-submit {
    width: 20px;
}
*/

.hint {
      color: gray;
      margin-left: 1em;
}

.btn-reveal-hint {
    float: right;
    clear: right;
    margin-bottom: 1em;
    
    /* Sometimes mathjax elements cover up the hint collapse button */
    z-index: 1;
    position: relative;
}

.btn-hint-collapse i {
    transition-duration: 0.2s;
    transition-property: transform;
}

.btn-hint-collapse {
    float: right;
    clear: right;
    margin-bottom: 1em;
    
    /* Sometimes mathjax elements cover up the hint collapse button */
    z-index: 1;
    position: relative;
}

/****************************************************************
 Code for making spinning icons 
*/

.fa-spinning {
    animation: spin 1s infinite linear;
    -webkit-animation: spin2 1s infinite linear;
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}

/****************************************************************/

.pulsate {
    -webkit-animation: pusate 1s infinite alternate;
    -moz-animation: pusate 1s infinite alternate;
    -animation: pusate 1s infinite alternate;
    text-shadow: 0 0 8px #ccc;
}
@-webkit-keyframes pusate {
    from { box-shadow: 0 0 10px #333; }
    to { box-shadow: 0 0 20px #c00; }
}
@-moz-keyframes pusate {
    from { box-shadow: 0 0 10px #333; }
    to { box-shadow: 0 0 20px #c00; }
}
@keyframes pusate {
    from { box-shadow: 0 0 10px #333; }
    to { box-shadow: 0 0 20px #c00; }
}

/****************************************************************/

.activity img {
    max-width: 100%;
}

/****************************************************************/
/* LaTeX logo */

span.LATEX {
  font-family: Times, "Times New Roman", serif;	
  letter-spacing: 1px;
}

span.LATEX .A {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 0.85em;
  vertical-align: 0.15em;
  margin-left: -0.36em;
  margin-right: -0.15em;
}

span.LATEX .TEX .E {
  text-transform: uppercase;
  vertical-align: -0.5ex;
  margin-left: -0.1667em;
  margin-right: -0.125em;
  font-size: 1em;
}

/****************************************************************/
/* More tex4ht css */

.center {
    text-align: center;
}

.preamble {
	  display: none;
}

/****************************************************************/
/* Course navigation */

.scrollbar {
    height: 10px;
    margin: 1em 0px 0px 0px;
    background: #DDD none repeat scroll 0% 0%;
    line-height: 0;
}

.scrollbar .handle {
    height: 100%;
    background: #555;
    cursor: pointer;
}

.frame ul.items {
    list-style: outside none none;
    margin: 0px;
    padding: 0px;
    height: 100%;
    line-height: 168px;
}

.frame ul.items li {
    float: left;
    //width: 168px;
    height: 168px;
    color: #DDD;
    margin: 0;
    padding: 0;    
    cursor: pointer;    
}

.frame ul.items li a {
    //width: 168px;
    //height: 168px;
    margin: 0;
}

/*
.frame ul.items li a.practice {
    width: 37px;
}
*/

.frame {
    height: 168px;
    line-height: 168px;
}

.frame ul.items li.active
{
    //background: #F00;
}

.btn-margin {
    margin-left: 4px;
}

.activity-content {
    margin-top: 6pt;
}

.activity-card .progress {
    z-index: 1;
}

.activity-card {
    width: 168px;
    height: 168px;
    margin: 5px;
    position: relative;
    border: 1px solid #DDD;
    overflow: hidden;
    background-size: 100% 100%;
}

h1.activity-card {
    margin: 5px;
}

li h1.activity-card {
    margin: 0;
}

h1.activity-card, .xourse h1.activity-card {
    background-color: gray;
    margin-left: 0;
    color: white;
    font-weight: 800;
    font-size: 20px;
    text-align: right;
    padding-right: 6pt;
    padding-top: 6px + 34pt; // to agree with .pagination > li > a and a progress bar
}

.activity-card.chapter::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 1em;
}

.activity-card.chapter::before {
    background-color: #ccc;
}

.activity-card.chapter, .xourse .activity-card.chapter {
    padding-left: 1.5em;
}

.activity-card {
    word-wrap: break-word;
}

.activity-card.chapter h1 {
    font-weight: 1200;
}

.activity-card h1 {
    margin: 0;
    margin-right: -2pt;
    margin-bottom: -8pt;
    padding: 0;
    text-align: right;
    position: absolute;
    bottom: 0;
    right: 0;
}

.activity-card span.titlemark {
    display: none;
    z-index: 2;    
}

.large-card {
    width: 250px;
    background: #888;
    color: white;
    border: none;    
}

.medium-card {
    width: 200px;
    background: #AAA;
    color: white;    
    border: none;    
}

.activity-card .card-title, .activity-card .card-summary {
    color: #333;
    display: inline;    
}

.activity-card.chapter .card-title {
    font-weight: 800;
    color: black;
}

.activity-card .card-title {
    font-weight: bold;
    font-size: 20px;
    padding-right: 0.5em;
}    

.activity-card .card-summary {
    font-weight: normal;
    font-size: 14px;
    opacity: 0.5;
}    


/****************************************************************/
/* Icons in text fields */

/* enable absolute positioning */
.inner-addon { 
    position: relative; 
}

/* style icon */
.inner-addon .fa {
  position: absolute;
  padding: 10px;
  pointer-events: none;
}

/* align icon */
.left-addon .fa  { left:  0px;}
.right-addon .fa { right: 0px;}

/* add padding  */
.left-addon input  { padding-left:  30px; }
.right-addon input { padding-right: 30px; }

/* Selects shouldn't have the caret */
select {
    -webkit-appearance: none;
    -moz-appearance: window;
    padding: 2px 30px 2px 2px;
    border: none;
    background-repeat: no-repeat;
    background-position: right center;
}

/****************************************************************/
/* tex4ht generates description lists from \begin{description} */

dl.description {
    margin-top: 12px;
    margin-bottom: 12px;    
}

dl.description dt.description {
    float: left;
    clear: left;
    padding-right: 0.5em;
}

/****************************************************************/
/* image-environment's use jquery-fullsizable */

.image-environment.well {
    background-color: white;

    text-align: center;
}

/* BADBAD: maybe this should be controlled with tex4ht somehow */
.image-environment img {
    width: 75%;
}

@import '../../node_modules/jquery-fullsizable/css/jquery-fullsizable.css';
@import '../../node_modules/jquery-fullsizable/css/jquery-fullsizable-theme.css';
#jquery-fullsizable {
    background-color: white;
}

#fullsized_go_prev, #fullsized_go_next {
    text-align: center;
    background: none;
    background-color: #EEE;
}

#fullsized_go_prev {
    left: 0;
}

#fullsized_go_prev:hover, #fullsized_go_next:hover {
    background-color: #AAA;
}

#fullsized_go_next {
    right: 0;
}



#fullsized_go_prev:before {
    left: 0;
}
#fullsized_go_next:before {
    right: 0;
}

#fullsized_go_prev:before, #fullsized_go_next:before {
    color: black;
    font-family: FontAwesome;
    width: 32px;
    height: 32px;
    font-size: 32px;
    line-height: 32px;
    position: absolute;
    top: 47px;
}

#fullsized_go_prev:before {
    content: "\F104";    
}

#fullsized_go_next:before {
    content: "\F105";
}


#fullsized_close, #fullsized_fullscreen {
  position: absolute;
  top: 0;
  display: block;
  width: 32px;
  height: 32px;
  background: none;
  text-align: center;
}

#fullsized_close {
    right: 0;
}

#fullsized_fullscreen {
  right: 40px;
}

#fullsized_close:before, #fullsized_fullscreen:before {
    color: black;
    font-family: FontAwesome;
    width: 32px;
    height: 32px;
    font-size: 32px;
    line-height: 32px;
}

#fullsized_close:before {
    content: "\F00D";    
}

#fullsized_fullscreen:before {
    content: "\F065";
}

#fullsized_close:hover, #fullsized_fullscreen:hover {
  background-color: #AAA;
  text-decoration: none;			   
}


/****************************************************************/
/* select boxes should have a lighter background color */

select.form-control {
    .well; .well-sm;
    padding: 0;
    -moz-appearance: none;
    -webkit-appearance: none;    
    background-color: white;
}

option:not(:checked) {
    background-color: white;
    color: #000;
}

/****************************************************************/
/* Try to spread out lines a bit for readability? */

.activity-content {
    line-height: @line-height-base * 1.35;
}

